--- a/cfg/vgg16.cfg
+++ b/cfg/vgg16.cfg
@@ -12,6 +12,8 @@ filters=64
 size=3
 stride=1
 pad=1
+
+[relu]
 activation=leaky
 
 [convolutional]
@@ -20,6 +22,8 @@ filters=64
 size=3
 stride=1
 pad=1
+
+[relu]
 activation=leaky
 
 [maxpooling]
@@ -32,6 +36,8 @@ filters=128
 size=3
 stride=1
 pad=1
+
+[relu]
 activation=leaky
 
 [convolutional]
@@ -40,6 +46,8 @@ filters=128
 size=3
 stride=1
 pad=1
+
+[relu]
 activation=leaky
 
 [maxpooling]
@@ -52,6 +60,8 @@ filters=256
 size=3
 stride=1
 pad=1
+
+[relu]
 activation=leaky
 
 [convolutional]
@@ -60,6 +70,8 @@ filters=256
 size=3
 stride=1
 pad=1
+
+[relu]
 activation=leaky
 
 [convolutional]
@@ -67,7 +79,9 @@ batch_normalize=1
 filters=256
 size=3
 stride=1
-pad=0
+pad=1
+
+[relu]
 activation=leaky
 
 [maxpooling]
@@ -80,6 +94,8 @@ filters=512
 size=3
 stride=1
 pad=1
+
+[relu]
 activation=leaky
 
 [convolutional]
@@ -88,6 +104,8 @@ filters=512
 size=3
 stride=1
 pad=1
+
+[relu]
 activation=leaky
 
 [convolutional]
@@ -96,6 +114,8 @@ filters=512
 size=3
 stride=1
 pad=1
+
+[relu]
 activation=leaky
 
 [maxpooling]
@@ -108,6 +128,8 @@ filters=512
 size=3
 stride=1
 pad=1
+
+[relu]
 activation=leaky
 
 [convolutional]
@@ -116,6 +138,8 @@ filters=512
 size=3
 stride=1
 pad=1
+
+[relu]
 activation=leaky
 
 [convolutional]
@@ -124,8 +148,36 @@ filters=512
 size=3
 stride=1
 pad=1
+
+[relu]
 activation=leaky
 
 [maxpooling]
 size=2
 stride=2
+
+####################################### VGG-19
+# [convolutional]
+# batch_normalize=1
+# filters=1024
+# size=3
+# stride=1
+# pad=1
+
+# [relu]
+# activation=leaky
+
+# [convolutional]
+# batch_normalize=1
+# filters=1024
+# size=1
+# stride=1
+# pad=1
+
+# [relu]
+# activation=leaky
+
+# [maxpooling]
+# size=2
+# stride=2
+
