--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ __pycache__/
 *.py[cod]
 *$py.class
 *pyc
+utils/__pycache__/
+models/__pycache__/
+data/__pycache__/
 
 # weights of saved
 weights/
